feat(server) added integration with maps
